tests-integration/tests/roundtrip/invalid/syntax/multiple/02/input.essence
fiuch that A = {1,2,3} inters$ true 
find b  : bool sat A = {1,2,3} inters$ trueb = ؊1,1}